fix input overflow css

--- a/static/checker.css
+++ b/static/checker.css
@@ -38,6 +38,7 @@ input {
     border: none;
     margin-bottom: 15px;
     font-size: 16px;
+    box-sizing: border-box;
 }
 
 /* BUTTON */
